Improve tp2 and tp3

--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -28,11 +28,11 @@ El objetivo del TP es comprender el modelo cinemático y la estimación de pose 
 
 \section{Entrega}
 \begin{itemize}
-    \item En caso de utilizar su propio entorno de trabajo, deberá hacer una imagen docker que permita reproducir fácilmente los resultados de cada ejercicio. También, deberá proveer un repositorio git junto con las instrucciones de compilación y ejecución en un archivo README.md.
+    \item Se debe proveer un repositorio git que contenga el código desarrollado, una imagen docker y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución.
 
-    \item En caso de utilizar el framework de \url{https://www.theconstructsim.com} se deberá proveer el link al proyecto.
-
-    \item Además, se deberá entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
+    \item Se debe entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
+    
+    \item En caso de utilizar el framework \url{https://www.theconstructsim.com}, se deberá además el link al proyecto.
 \end{itemize}
 
 
