--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -185,5 +185,7 @@
     
     \TODO{Agregar ICC info para el TP2. Obtenerla de: \url{https://www.cs.columbia.edu/~allen/F17/NOTES/icckinematics.pdf}}
     
+    \TODO{Agregar formula R = W/V para el TP2. obtenida de wikipedia: \url{https://es.wikipedia.org/wiki/Velocidad_angular\#Velocidad\_angular\_en\_un\_movimiento\_plano\_circular}}
+    
 
 \end{frame}
