--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -160,6 +160,8 @@ En base a los gráficos anteriores:
 
 \item Describir cuál sería la secuencia de comandos de velocidad a aplicar al robot para seguir uno de los caminos mostrados en la Figura~\ref{fig:trajectories} (elegir solo uno).
 
+\nota{Para setear los comandos de velocidad por un tiempo determinado se puede utilizar el comando ros2 topic pub con los argumentos -1 y --keep-alive.}
+
 \end{enumerate}
 
 
