Add quadtree and octree images

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -1,6 +1,8 @@
 \begin{frame}
 	\frametitle{Material para armado de estas slides}
-	Curso de Cyrill Stachniss: \url{https://youtu.be/v-Rm9TUG9LA} slides: \url{http://ais.informatik.uni-freiburg.de/teaching/ws12/mapping/pdf/slam11-gridmaps-4.pdf}
+	Curso de Cyrill Stachniss: \url{https://youtu.be/v-Rm9TUG9LA}
+
+	Curso de Cyrill Stachniss (slides): \url{http://ais.informatik.uni-freiburg.de/teaching/ws12/mapping/pdf/slam11-gridmaps-4.pdf}
     
 
 \end{frame}
@@ -106,12 +108,32 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Quadtree y Octree}
+    \frametitle{Quadtree}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
-    \TODO{Agregar Quadtree y Octree}
+    
+    \begin{figure}
+    	\includegraphics[width=0.5\columnwidth]{./images/quadtree.pdf}
+    \end{figure}
     
 \end{frame}
+
+
+\begin{frame}
+	\frametitle{Octree (Octomap)}
+	\note{información extraída de https://youtu.be/v-Rm9TUG9LA}
+
+	\begin{figure}
+		\includegraphics[width=0.5\columnwidth]{./images/octree.pdf}
+	\end{figure}
+	
+	\begin{figure}
+		\includegraphics[width=\columnwidth]{./images/octomap.pdf}
+	\end{figure}
+	
+\end{frame}
+
+
 
 
 \begin{frame}
