--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -148,9 +148,8 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{TSDF}
-    \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
-    
+    \frametitle{TSDF: Truncated Signed Sistance Function}
+   
     \TODO{Agregar TSDF}
     
 \end{frame}
