Add ellipsoid image

--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -18,9 +18,13 @@
 		{
 			\includegraphics[width=0.3\columnwidth]{./images/standard_deviation_diagram.pdf}
 		}
-		\subfloat[AGREGAR ELIPSE ELIPSOIDE ]
+		\subfloat[]
 		{
-			\includegraphics[width=0.3\columnwidth]{./images/standard_deviation_diagram.pdf}
+			\includegraphics[width=0.2\columnwidth]{./images/multivariate_normal_sample.pdf}
+		}
+		\subfloat[]
+		{
+			\includegraphics[width=0.2\columnwidth]{./images/ellipsoid.pdf}
 		}
 	\end{figure}
 \end{frame}
