Add TSDF images

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -150,7 +150,17 @@
 \begin{frame}
     \frametitle{TSDF: Truncated Signed Sistance Function}
    
-    \TODO{Agregar TSDF}
+   	\begin{figure}[!h]
+	   	\centering
+	   	\subfloat[Mapa Volumétrico 2D (Grid map)]
+	   	{
+	   		\includegraphics[width=0.45\columnwidth]{./images/tsdf.png}
+	   	}
+	   	\subfloat[Mapa Volumétrico 3D (Voxel map)]
+	   	{
+	   		\includegraphics[width=0.45\columnwidth]{./images/tsdf_reconstruction.pdf}
+	   	}
+   \end{figure}
     
 \end{frame}
 
