Improve mapping slides

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -152,11 +152,11 @@
    
    	\begin{figure}[!h]
 	   	\centering
-	   	\subfloat[Mapa Volumétrico 2D (Grid map)]
+	   	\subfloat[TSDF 2D Function]
 	   	{
 	   		\includegraphics[width=0.45\columnwidth]{./images/tsdf.png}
 	   	}
-	   	\subfloat[Mapa Volumétrico 3D (Voxel map)]
+	   	\subfloat[TSDF Reconstruction]
 	   	{
 	   		\includegraphics[width=0.45\columnwidth]{./images/tsdf_reconstruction.pdf}
 	   	}
@@ -576,7 +576,7 @@ tenemos entonces:
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
    	\begin{figure}[!h]
-        \includegraphics[width=0.5\columnwidth]{./images/inverse_senor_model_range_finder.pdf}
+        \includegraphics[width=0.8\columnwidth]{./images/inverse_senor_model_range_finder.pdf}
     \end{figure}
     
 \end{frame}
