--- a/teoricas/teorica_07/src/bibliography.tex
+++ b/teoricas/teorica_07/src/bibliography.tex
@@ -2,11 +2,12 @@
 	\frametitle{Bibliografía}
    
     Static state binary Bayes filter
-    Thrun et al.: “Probabilistic Robotics”,
-    Chapter 4.2
+    
+    Thrun et al.: “Probabilistic Robotics”, Chapter 4.2
+    
     Occupancy Grid Mapping
-    Thrun et al.: “Probabilistic Robotics”,
-    Chapter 9.1+9.2
+    
+    Thrun et al.: “Probabilistic Robotics”, Chapter 9.1+9.2
 	
 	\printbibliography
 	
