Add Kalman Filter linear equations cross out image

--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -58,10 +58,15 @@
 		\item Los problemas reales en general emplean funciones no-lineales
 	\end{itemize}
 	
-	\begin{align*}
-		\state_{t} &= A_{t} \state_{t-1} + B_{t}\controlCommand_{t} + \motionModelNoise_{t}\\
-		\observation_{t} &= C_{t} \state_{t} + \measurementModelNoise_{t}
-	\end{align*}
+%	\begin{align*}
+%		\state_{t} &= A_{t} \state_{t-1} + B_{t}\controlCommand_{t} + \motionModelNoise_{t}\\
+%		\observation_{t} &= C_{t} \state_{t} + \measurementModelNoise_{t}
+%	\end{align*}
+
+	\begin{figure}[!h]
+
+		\includegraphics[width=0.4\columnwidth]{./images/kf_linear_equations_cross_out.pdf}
+	\end{figure}
 
 \TODO{tachar las formulas lineales}
 
