Add covariance odometry motion model image

--- a/teoricas/teorica_06/src/localization.tex
+++ b/teoricas/teorica_06/src/localization.tex
@@ -287,13 +287,13 @@
 	
 	\begin{figure}[!h]
 		\centering
-		\subfloat[\TODO{CORREGIR IMGAGEN}]
+		\subfloat[Covarianza del motion model]
 		{
-			\includegraphics[width=0.6\columnwidth]{./images/samping_odometry_motion_model.pdf}
+			\includegraphics[width=0.6\columnwidth]{./images/covariance_odometry_motion_model.pdf}
 		}\\
 		\subfloat[Muestras del motion model]
 		{
-			\includegraphics[width=0.6\columnwidth]{./images/samping_odometry_motion_model.pdf}
+			\includegraphics[width=0.6\columnwidth]{./images/sampling_odometry_motion_model.pdf}
 		}
 	\end{figure}
 	
