Add Kalman Filter components slide

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -70,6 +70,7 @@
 \newcommand{\normalDistribution}[2]{\mathcal{N}\left( {#1}, {#2} \right)}
 \newcommand{\motionModelJacobianControl}{V}
 \newcommand{\motionModelCovariance}{M}
+\newcommand{\stateEvolutionMatrix}{A}
 
 % Mapping slides
 \newcommand{\map}{m}
