--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -161,14 +161,6 @@
 	
 \end{frame}
 
-
-\begin{frame}
-	\frametitle{Linearización en EKF: Expansión de Taylor de primer orden}
-	
-	\TODO{Agregar slides \url{https://www.youtube.com/watch?v=E-6paM\_Iwfc\&t=3260s}}
-\end{frame}
-
-
 \begin{frame}
 	\frametitle{Suposición de Linealidad}
 	
@@ -183,6 +175,25 @@
 	\begin{figure}[!h]
 		\includegraphics[width=0.5\columnwidth]{./images/nonlinear_transformation_of_a_gaussian.pdf}
 	\end{figure}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Distribuciones No-Gaussianas}
+	
+	\note{Información extraída de https://www.youtube.com/watch?v=E-6paM\_Iwfc\&t=3260s}
+	
+	\begin{itemize}
+		\item Las funciones no-lineales llevan a distribuciones no Gaussianas
+		\item Entonces, no podemos aplicar Kalman Filter!
+	\end{itemize}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Linearización en EKF: Expansión de Taylor de primer orden}
+	
+	\TODO{Agregar slides \url{https://www.youtube.com/watch?v=E-6paM\_Iwfc\&t=3260s}}
 \end{frame}
 
 \begin{frame}
