--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -1,4 +1,32 @@
 \begin{frame}
+	\frametitle{Material}
+	
+	Vídeos para armar estas slides:
+	\begin{itemize}
+		\item Cyrill Stachniss SLAM \url{https://youtu.be/BuRCJ2fegcc}
+		\item Cyrill Stachniss Graph-based SLAM using Pose Graphs \url{https://youtu.be/uHbRKvD8TWg}
+		\item Cyrill Stachniss Graph-Based SLAM with Landmarks \url{https://youtu.be/mZBdPgBtrCM}
+		\item Cyrill Stachniss Robust Least Squares for Graph-Based SLAM \url{https://youtu.be/z60RbiY18I8}
+		\item Cyrill Stachniss Factor Graph \url{https://youtu.be/uuiaqGLFYa4}
+		\item Cyrill Stachniss Hierarchical Pose Graphs for SLAM \url{https://youtu.be/uRSow8nMEw8}
+		\item Wolfram Burgard, Giorgio Grisetti, and Cyrill Stachniss: Graph-based SLAM \url{https://youtu.be/Alu59K8zvYs}
+		\item Frank Dellaert \url{https://youtu.be/tm4E1o11kGo}
+	\end{itemize}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Temario para estas slides}
+	
+	\begin{itemize}
+		\item Graph-SLAM / Factor Graph
+		\item Loop-Closure
+		\item Bundle Adjustment
+	\end{itemize}
+	
+\end{frame}
+
+\begin{frame}
     \frametitle{Ejemplo de SLAM}
     
     \begin{figure}
