Improve nota environment in tps

--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -76,7 +76,9 @@ Resuelva:
 
 Descargue el archivo \emph{ground-truth} (trayectoria real realizada por el robot) localizado \url{ http://robotics.ethz.ch/~asl-datasets/ijrr_euroc_mav_dataset/machine_hall/MH_01_easy/MH_01_easy.zip}.
 
-\nota Para la descarga se recomienda utilizar el programa \lstinline{aria2c} con los parámetros: \lstinline{aria2c -s N -x N <URL>}, con \lstinline{N} la cantidad de cores en su computadora.
+\begin{nota}
+	Para la descarga se recomienda utilizar el programa \lstinline{aria2c} con los parámetros: \lstinline{aria2c -s N -x N <URL>}, con \lstinline{N} la cantidad de cores en su computadora.
+\end{nota}
 
 \begin{enumerate}
     \item El \emph{ground-truth} se encuentra en coordenadas de la IMU (Body). Se pide crear un script en python que dada la trayectoría ground-truth (timestamp, x, y, z, qw, qx, qy, qz) (primeras 8 columnas del archivo \lstinline{MH_01/state_groundtruth_estimate0.csv}) genere el ground-truth pero que este esté dado en el sistema de coordenadas de la cámara inicial. Para esto deberá utilizar las transformaciones provistas en el dataset.
@@ -85,7 +87,11 @@ Descargue el archivo \emph{ground-truth} (trayectoria real realizada por el robo
     
     \item Modifique el script para que genere una imagen con ambos \emph{ground-truth} (el camino de la IMU y el camino de la cámara). Aplique las transformaciones necesaria para que ambos caminos esten en el sisma de coordenadas del ground-truth original. Agregar la imagen al informe.
 \end{enumerate}
-\nota Para graficar en Python se recomienda utilizar la librería matplotlib\footnote{\url{https://matplotlib.org/}}. Para trabajar con transformaciones en Python se recomienda utilizar la librería: transforms3d\footnote{\url{https://github.com/matthew-brett/transforms3d}}
+
+\begin{nota}
+	Para graficar en Python se recomienda utilizar la librería matplotlib\footnote{\url{https://matplotlib.org/}}. Para trabajar con transformaciones en Python se recomienda utilizar la librería: transforms3d\footnote{\url{https://github.com/matthew-brett/transforms3d}}
+\end{nota}
+
 
 
 
