--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -8,7 +8,7 @@
 
 \codigo{R-521}
 \materia{Robótica Móvil}
-\titulo{Visión por Computadora: Estimación de Pose}
+\titulo{Visión por Computadora: Reconstrucción 3D y Estimación de Pose}
 
 \soluciones
 \commentstrue
